# siminau-rpc

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
codeconvert/: Cargo.toml
codeconvert/src/: lib.rs
derive/: Cargo.toml
derive/src/: as_message.rs  codeconvert.rs  datakind.rs  from_message.rs  from_version_message.rs  lib.rs
derive/tests/: as_message.rs  datakind.rs  from_message.rs  from_version_message.rs
src/: codec.rs  future.rs  lib.rs  message.rs  protocol.rs  server.rs  util.rs
src/core/: mod.rs  new.rs  newrequest.rs  notify.rs  request.rs  response.rs
src/message/: mod.rs  notify.rs  request.rs  response.rs  v1.rs
src/message/v1/: mod.rs  request.rs  requestbuilder.rs  response.rs  responsebuilder.rs  util.rs
src/proto/: mod.rs  msgpack.rs
src/test/: future.rs  mod.rs
src/test/core/: check_int.rs  message.rs  messagetype.rs  mod.rs  notify.rs  response.rs  rpcmessage.rs
src/test/core/request/: mod.rs  requestmessage.rs  rpcrequest.rs
src/test/message/: mod.rs  v1.rs
src/test/message/v1/: mod.rs  requestbuilder.rs  responsebuilder.rs  util.rs
tests/: test_server.rs
