[package]
name = "siminau-rpc"
version = "0.1.0"
authors = ["Ariel De Ocampo <arielmakestuff@gmail.com>"]

[dependencies]

# Error deps
failure = "0.1"
failure_derive = "0.1"

# General deps
bitflags = "1"

# MsgPack deps
serde = "1.0"
serde_derive = "1.0"
rmp = "0.8"
rmp-serde = "0.13"

# Tokio deps
bytes = "0.4"
futures = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"

# Proc macro
siminau-rpc-derive = { path = "derive" }

[dependencies.rmpv]
version = "0.4"
features = ["with-serde"]

[dev-dependencies]
# tempdir = "0.3.5"
# chrono = "0.3"
quickcheck = "0.5"
proptest = "0.3"

# Tokio deps
tokio-service = "0.1"
